# SlaytheSpire2

./: README.md  restore_mods.bat  slaythespire2.bat
.github/workflows/: release.yml
DamageMeter/: DamageMeter.json  DamageMeter.pck
ModConfig/: ModConfig.json  ModConfig.pck
RemoveMultiplayerPlayerLimit/: config.ini
RouteSuggest-v1.11.0.zip-54-1-11-0-1776829629/: RouteSuggest.json  RouteSuggest.pck
SlaytheSpire2_GUI/: 修改日志.md
SlaytheSpire2_GUI/gui_rust/: .gitignore
SlaytheSpire2_GUI/gui_rust/tauri-app/src/: index.html  main.js  styles.css
SlaytheSpire2_GUI/gui_rust/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
SlaytheSpire2_GUI/gui_rust/tauri-app/src-tauri/capabilities/: default.json
SlaytheSpire2_GUI/gui_rust/tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs
SpeedX/: SpeedX.pck
modes/RemoveMultiplayerPlayerLimit/: RemoveMultiplayerPlayerLimit.json  RemoveMultiplayerPlayerLimit.pck
modes/SpeedX/: SpeedX.json
